--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     #message {
       display: none;
-      font-size: 1.5rem;
-      color: #28a745;
+      font-size: 2.0rem;
+      color: #FF1493;
       margin-top: 1rem;
       animation: fadeIn 1s ease-in-out;
     }
@@ -81,9 +81,9 @@
 </head>
 <body>
 
-  <h1>Xin lỗi em ❤️</h1>
+  <h1>Anh Xin lỗi em ❤️</h1>
   <p>Anh biết anh đã sai. Hãy tha thứ cho anh nhé!</p>
-  <button onclick="showMessage()">Tha thứ cho anh</button>
+  <button onclick="showMessage()">Bấm vào đây để tha thứ cho anh :)</button>
   <p id="message">Cảm ơn em nhiều lắm! Anh yêu em! ❤️</p>
 
   <script>
